@@ -1,5 +1,6 @@
 unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
 
+  [ Marco Trevisan (Treviño) ]
   * InputMonitor: add an unity class that monitors XInput2 events and
     converts them to XEvent
   * EdgeBarrierController: use InputMonitor to get the barrier events
@@ -16,6 +17,11 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
     too shortly
   * LockScreenController: ignore icon_paths_changed signal in
     menumanager for Lockscreen
+
+  [ Andrea Azzarone ]
+  * Properly handle the file manager copy dialog in
+    FileManagerLauncherIcon and in StorageLauncherIcon. (LP: #1575452,
+    LP: #1609845)
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200
 
